# hide-seek-client

./: .gitignore  BUILD  CHANGELOG  LICENSE  Makefile  README.md  ROADMAP  WORKSPACE  bazel-bin  bazel-hide-seek-client  bazel-out  bazel-testlogs  config.txt  deps.bzl  go.mod  go.sum  imgui.ini  main.go  storage.db
api/: BUILD.bazel  back_services.proto  base.proto  server_external.proto  services_external.proto
assets/: BUILD.bazel  embed.go  star_wars.kra~
assets/fonts/debug/: debug.toml
assets/images/heroes/: pumpkin.toml  pumpkinhero.toml
assets/images/heroes/thumbnails/: pumpkin.png~  pumpkin.toml
assets/images/maps/thumbnails/: helloween.toml  starwars.toml
assets/images/menues/buttons/: button_join.toml  button_start.toml  settingswheel.toml
assets/images/menues/inputs/: input.kra  input.toml
assets/images/system/buttons/: back.toml  button_confirm_game.toml  button_join.toml  button_save_config.toml  button_start.toml
assets/images/system/inputs/: input.toml
assets/images/system/textareas/: textarea.toml
assets/images/weapon/: red_sword.toml
assets/metadata/camera/: camera.toml
assets/metadata/fonts/debug/: debug.toml
assets/metadata/fonts/waitroom/: waitroom.toml
assets/metadata/heroes/: bowman.toml  pumpkin.toml
assets/metadata/heroes/thumbnails/: pumpkin.toml
assets/metadata/hud/health/: health.toml
assets/metadata/maps/thumbnails/: helloween.toml  starwars.toml
assets/metadata/system/buttons/: back.toml  button_confirm_game.toml  button_join.toml  button_join_game.toml  button_save_config.toml  button_start.toml  settingswheel.toml
assets/metadata/system/checkbox/: greencheckboxoff.toml  greencheckboxon.toml
assets/metadata/system/inputs/: joingameinput.toml
assets/metadata/system/textareas/: textarea.toml
assets/metadata/weapon/sword/: redsword.toml
assets/shaders/: foot_prints.kage  torch.glsl  torch_animated_lightning.kage  torch_lightning.go
cmd/: BUILD.bazel  main.go
cmd/HideSeek/: main.go
internal/core/audiocontroller/: BUILD.bazel  audiocontoller.go
internal/core/camera/: BUILD.bazel  camera.go
internal/core/effects/lines/: BUILD.bazel  lines.go
internal/core/events/: BUILD.bazel  activity.go  collision.go  collisions.go  events.go  gamepad.go  input.go  keyboard.go  mouse.go  window.go
internal/core/gamesettings/: BUILD.bazel  gamesettings.go
internal/core/gamesettings/regime/: BUILD.bazel  common.go  deathmatch.go  squadxsquad.go
internal/core/middlewares/: BUILD.bazel  audio.go  middlewares.go  prepare.go  render.go  ui.go
internal/core/networking/: BUILD.bazel  dialer.go  lanserver.go  networking.go
internal/core/networking/api/: api.pb.go  api.proto  api_grpc.pb.go
internal/core/networking/clients/: BUILD.bazel  base.go  clients.go  services.go
internal/core/networking/dialer/: BUILD.bazel  dialer.go
internal/core/networking/services/: availability.go  base.go  services.go
internal/core/notifications/: BUILD.bazel  notifications.go
internal/core/objects/: BUILD.bazel  ammo.go  base.go  camera.go  common.go  constants.go  element.go  helper.go  loot.go  map.go  objects.go  pc.go  projectile.go  spawn.go  usedmanager.go  weapon.go  world.go
internal/core/physics/: BUILD.bazel  jump.go  physics.go
internal/core/player/: BUILD.bazel  player.go
internal/core/player/trackmanager/: BUILD.bazel  trackmanager.go
internal/core/profiling/: BUILD.bazel  profiling.go
internal/core/profiling/common/: common.go
internal/core/profiling/ingame/: ingame.go
internal/core/profiling/runtime/: runtime.go
internal/core/render/: BUILD.bazel  render.go
internal/core/sources/: BUILD.bazel  audio.go  colliders.go  extensions.go  font.go  images.go  metadata.go  parser.go  postloader.go  premitives.go  shaders.go  sources.go  tilemaps.go
internal/core/sourceupgrader/: BUILD.bazel  metadataupgrader.go
internal/core/statemachine/: BUILD.bazel  common.go  constants.go  multiple.go  single.go  statemachine.go
internal/core/storage/: BUILD.bazel  common.go  db.go  query.go  storage.go  user.go  userstorage.go  usertemporary.go
internal/core/world/: BUILD.bazel  camera.go  world.go
internal/layers/animation/: BUILD.bazel  animation.go
internal/layers/animation/game/: BUILD.bazel  game.go
internal/layers/audio/: BUILD.bazel  audio.go
internal/layers/audio/buttonclick/: BUILD.bazel  buttonclick.go
internal/layers/audio/click/: BUILD.bazel  click.go
internal/layers/audio/game/: BUILD.bazel  game.go
internal/layers/audio/notificationnew/: BUILD.bazel  notificationnew.go
internal/layers/audio/start_menu/: start_menu.go
internal/layers/audio/startmenu/: BUILD.bazel  startmenu.go
internal/layers/networking/: BUILD.bazel  networking.go
internal/layers/networking/collection/: collection.go
internal/layers/networking/creationlobbymenu/: BUILD.bazel  creationlobbymenu.go
internal/layers/networking/game/: BUILD.bazel  game.go
internal/layers/networking/joinlobbymenu/: joinlobbymenu.go
internal/layers/networking/waitroom/: waitroom.go
internal/layers/networking/waitroomjoin/: BUILD.bazel  waitroomjoin.go
internal/layers/networking/waitroomstart/: BUILD.bazel  waitroomstart.go
internal/layers/particles/: BUILD.bazel  particles.go
internal/layers/particles/game/: BUILD.bazel  game.go
internal/layers/particles/resume/: BUILD.bazel  resume.go
internal/layers/ui/: BUILD.bazel  ui.go
internal/layers/ui/creation_lobby_menu/: BUILD.bazel  creation_lobby_menu.go
internal/layers/ui/debug/: BUILD.bazel  debug.go
internal/layers/ui/game/: BUILD.bazel  game.go
internal/layers/ui/gamesettingschoose/: gamesettingschoose.go
internal/layers/ui/hero_choose/: hero_choose.go
internal/layers/ui/herochoose/: BUILD.bazel  herochoose.go
internal/layers/ui/joinlobbymenu/: joinlobbymenu.go
internal/layers/ui/joinmenu/: BUILD.bazel  joinmenu.go
internal/layers/ui/map_choose/: map_choose.go
internal/layers/ui/mapchoose/: BUILD.bazel  mapchoose.go
internal/layers/ui/popup/: BUILD.bazel  (+1 more)
internal/loop/: BUILD.bazel  loop.go
tools/debugui/: BUILD.bazel  debugiu.go
(+357 files in other folders)
