load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name="server_external_proto",
    visibility = ["//visibility:public"],
    srcs = [
        "server_external.proto"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:wrappers_proto"],
)

proto_library(
    name="services_external_proto",
    visibility = ["//visibility:public"],
    srcs = [
        "services_external.proto"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:wrappers_proto"],
)

go_proto_library(
    name="server_external_proto_go",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "internal/core/networking/api/server_external",
    visibility = ["//visibility:public"],
    proto = "server_external_proto",
)

go_proto_library(
    name="services_external_proto_go",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "internal/core/networking/api/services_external",
    visibility = ["//visibility:public"],
    proto = "services_external_proto",
)

go_library(
    name="server_external_proto_go_lib",
    deps = [":server_external_api_proto_go"],
    visibility = ["//visibility:public"],
)

go_library(
    name="services_external_proto_go_lib",
    deps = [":services_external_api_proto_go"],
    visibility = ["//visibility:public"],
)