# load("@rules_proto//proto:defs.bzl", "proto_library")
# load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
# load("@io_bazel_rules_go//go:def.bzl", "go_library")

# proto_library(
#     name = "server_external_proto",
#     srcs = [
#         "server_external.proto",
#     ],
#     visibility = ["//visibility:public"],
#     deps = [
#         "@com_google_protobuf//:empty_proto",
#         "@com_google_protobuf//:wrappers_proto",
#     ],
# )

# proto_library(
#     name = "services_external_proto",
#     srcs = [
#         "server_external.proto",
#         "services_external.proto",
#     ],
#     visibility = ["//visibility:public"],
#     deps = [
#         "@com_google_protobuf//:empty_proto",
#         "@com_google_protobuf//:wrappers_proto",
#     ],
# )

# go_proto_library(
#     name = "server_external_proto_go",
#     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
#     importpath = "internal/core/networking/api/server_external",
#     proto = "server_external_proto",
#     visibility = ["//visibility:public"],
# )

# go_proto_library(
#     name = "services_external_proto_go",
#     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
#     importpath = "internal/core/networking/api/services_external",
#     proto = ":services_external_proto",
#     visibility = ["//visibility:public"],
# )

# go_library(
#     name = "server_external_proto_go_lib",
#     visibility = ["//visibility:public"],
#     deps = [":server_external_api_proto_go"],
# )

# go_library(
#     name = "services_external_proto_go_lib",
#     visibility = ["//visibility:public"],
#     deps = [":services_external_api_proto_go"],
# )

# go_library(
#     name = "services_external",
#     embed = [":services_external_proto_go"],
#     importpath = "internal/core/networking/api/services_external",
#     visibility = [
#         "//:__subpackages__",
#         "@bazel_gazelle//:__subpackages__",
#         "@co_honnef_go_tools//:__subpackages__",
#         "@com_github_alimasyhur_is_connect//:__subpackages__",
#         "@com_github_antihax_optional//:__subpackages__",
#         "@com_github_atotto_clipboard//:__subpackages__",
#         "@com_github_burntsushi_toml//:__subpackages__",
#         "@com_github_burntsushi_xgb//:__subpackages__",
#         "@com_github_census_instrumentation_opencensus_proto//:__subpackages__",
#         "@com_github_cespare_xxhash_v2//:__subpackages__",
#         "@com_github_client9_misspell//:__subpackages__",
#         "@com_github_cncf_udpa_go//:__subpackages__",
#         "@com_github_cncf_xds_go//:__subpackages__",
#         "@com_github_davecgh_go_spew//:__subpackages__",
#         "@com_github_engoengine_glm//:__subpackages__",
#         "@com_github_engoengine_math//:__subpackages__",
#         "@com_github_envoyproxy_go_control_plane//:__subpackages__",
#         "@com_github_envoyproxy_protoc_gen_validate//:__subpackages__",
#         "@com_github_faiface_beep//:__subpackages__",
#         "@com_github_franela_goblin//:__subpackages__",
#         "@com_github_gabstv_ebiten_imgui//:__subpackages__",
#         "@com_github_gdamore_encoding//:__subpackages__",
#         "@com_github_gdamore_tcell//:__subpackages__",
#         "@com_github_ghodss_yaml//:__subpackages__",
#         "@com_github_go_gl_gl//:__subpackages__",
#         "@com_github_go_gl_glfw//:__subpackages__",
#         "@com_github_go_gl_glfw_v3_3_glfw//:__subpackages__",
#         "@com_github_go_gl_glow//:__subpackages__",
#         "@com_github_go_ping_ping//:__subpackages__",
#         "@com_github_gofrs_flock//:__subpackages__",
#         "@com_github_golang_freetype//:__subpackages__",
#         "@com_github_golang_glog//:__subpackages__",
#         "@com_github_golang_mock//:__subpackages__",
#         "@com_github_golang_protobuf//:__subpackages__",
#         "@com_github_google_go_cmp//:__subpackages__",
#         "@com_github_google_uuid//:__subpackages__",
#         "@com_github_gopherjs_gopherjs//:__subpackages__",
#         "@com_github_gopherjs_gopherwasm//:__subpackages__",
#         "@com_github_grpc_ecosystem_grpc_gateway//:__subpackages__",
#         "@com_github_hajimehoshi_bitmapfont_v2//:__subpackages__",
#         "@com_github_hajimehoshi_ebiten_v2//:__subpackages__",
#         "@com_github_hajimehoshi_file2byteslice//:__subpackages__",
#         "@com_github_hajimehoshi_go_mp3//:__subpackages__",
#         "@com_github_hajimehoshi_oto//:__subpackages__",
#         "@com_github_inkyblackness_imgui_go//:__subpackages__",
#         "@com_github_inkyblackness_imgui_go_v2//:__subpackages__",
#         "@com_github_inkyblackness_imgui_go_v4//:__subpackages__",
#         "@com_github_jakecoffman_cp//:__subpackages__",
#         "@com_github_jfreymuth_oggvorbis//:__subpackages__",
#         "@com_github_jfreymuth_vorbis//:__subpackages__",
#         "@com_github_kr_pretty//:__subpackages__",
#         "@com_github_kr_pty//:__subpackages__",
#         "@com_github_kr_text//:__subpackages__",
#         "@com_github_lucasb_eyer_go_colorful//:__subpackages__",
#         "@com_github_mattn_go_runewidth//:__subpackages__",
#         "@com_github_mattn_go_sqlite3//:__subpackages__",
#         "@com_github_mbndr_figlet4go//:__subpackages__",
#         "@com_github_mewkiz_flac//:__subpackages__",
#         "@com_github_niemeyer_pretty//:__subpackages__",
#         "@com_github_pkg_browser//:__subpackages__",
#         "@com_github_pkg_errors//:__subpackages__",
#         "@com_github_pmezard_go_difflib//:__subpackages__",
#         "@com_github_prometheus_client_model//:__subpackages__",
#         "@com_github_rogpeppe_fastuuid//:__subpackages__",
#         "@com_github_rs_xid//:__subpackages__",
#         "@com_github_sirupsen_logrus//:__subpackages__",
#         "@com_github_stretchr_objx//:__subpackages__",
#         "@com_github_stretchr_testify//:__subpackages__",
#         "@com_github_veandco_go_sdl2//:__subpackages__",
#         "@com_github_yarikrevich_caching//:__subpackages__",
#         "@com_github_yarikrevich_game_networking//:__subpackages__",
#         "@com_github_yarikrevich_gsl//:__subpackages__",
#         "@com_github_yarikrevich_wrapper//:__subpackages__",
#         "@com_github_yuin_goldmark//:__subpackages__",
#         "@com_google_cloud_go//:__subpackages__",
#         "@com_shuralyov_dmitri_gpu_mtl//:__subpackages__",
#         "@glfw//:__subpackages__",
#         "@glm//:__subpackages__",
#         "@imgui//:__subpackages__",
#         "@in_gopkg_check_v1//:__subpackages__",
#         "@in_gopkg_data_dog_go_sqlmock_v1//:__subpackages__",
#         "@in_gopkg_yaml_v2//:__subpackages__",
#         "@in_gopkg_yaml_v3//:__subpackages__",
#         "@io_bazel_rules_go//:__subpackages__",
#         "@io_opentelemetry_go_proto_otlp//:__subpackages__",
#         "@local//:__subpackages__",
#         "@org_golang_google_appengine//:__subpackages__",
#         "@org_golang_google_genproto//:__subpackages__",
#         "@org_golang_google_grpc//:__subpackages__",
#         "@org_golang_google_protobuf//:__subpackages__",
#         "@org_golang_x_crypto//:__subpackages__",
#         "@org_golang_x_exp//:__subpackages__",
#         "@org_golang_x_image//:__subpackages__",
#         "@org_golang_x_lint//:__subpackages__",
#         "@org_golang_x_mobile//:__subpackages__",
#         "@org_golang_x_mod//:__subpackages__",
#         "@org_golang_x_net//:__subpackages__",
#         "@org_golang_x_oauth2//:__subpackages__",
#         "@org_golang_x_sync//:__subpackages__",
#         "@org_golang_x_sys//:__subpackages__",
#         "@org_golang_x_term//:__subpackages__",
#         "@org_golang_x_text//:__subpackages__",
#         "@org_golang_x_tools//:__subpackages__",
#         "@org_golang_x_xerrors//:__subpackages__",
#         "@rules_cc//:__subpackages__",
#         "@rules_proto//:__subpackages__",
#     ],
# )

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "server_external_proto",
    srcs = [
        "server_external.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library(
    name = "services_external_proto",
    srcs = [
        "services_external.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "server_external_api",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/YarikRevich/hide-seek-client/internal/core/networking/api/server_external",
    protos = [
        ":server_external_proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "services_external_api",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/YarikRevich/hide-seek-client/internal/core/networking/api/services_external",
    protos = [
        ":services_external_proto",
    ],
    visibility = ["//visibility:public"],
)