load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "assets",
    srcs = ["embed.go"],
    embedsrcs = [
        "dist/audio/background.mp3",
        "dist/audio/helloween.mp3",
        "dist/audio/starwars.mp3",
        "dist/audio/soundeffects/mousepress.wav",
        "dist/audio/soundeffects/mousepressbutton.wav",
        "dist/fonts/base.ttf",
        "dist/images/archievements/10kills.png",
        "dist/images/effects/darkness.png",
        "dist/images/heroes/bowman.png",
        "dist/images/heroes/pumpkin.png",
        "dist/images/heroes/thumbnails/pumpkin.png",
        "dist/images/hud/health/health.png",
        "dist/images/labels/lost/loser.png",
        "dist/images/maps/helloween/background/background.png",
        "dist/images/maps/helloween/elements/goldchest.png",
        "dist/images/maps/helloween/elements/horizontaldoor.png",
        "dist/images/maps/helloween/elements/torch.png",
        "dist/images/maps/helloween/elements/verticaldoor.png",
        "dist/images/maps/starwars/background/background.png",
        "dist/images/maps/thumbnails/helloween.png",
        "dist/images/maps/thumbnails/starwars.png",
        "dist/images/system/background/background.png",
        "dist/images/system/buttons/back.png",
        "dist/images/system/buttons/button.png",
        "dist/images/system/buttons/settingswheel.png",
        "dist/images/system/checkbox/greencheckboxoff.png",
        "dist/images/system/checkbox/greencheckboxon.png",
        "dist/images/system/inputs/input.png",
        "dist/images/system/textareas/textarea.png",
        "dist/images/weapon/bow/ammo/arrow.png",
        "dist/images/weapon/bow/bow.png",
        "dist/images/weapon/sword/redsword.png",
        "dist/images/weapon/thumbnails/bow.png",
        "dist/metadata/camera/camera.toml",
        "dist/metadata/fonts/debug/debug.toml",
        "dist/metadata/fonts/settingsmenu/settingsmenu.toml",
        "dist/metadata/fonts/waitroom/waitroom.toml",
        "dist/metadata/heroes/bowman.toml",
        "dist/metadata/heroes/pumpkin.toml",
        "dist/metadata/heroes/thumbnails/pumpkin.toml",
        "dist/metadata/hud/health/health.toml",
        "dist/metadata/maps/helloween/background/background.toml",
        "dist/metadata/maps/helloween/elements/goldchest.toml",
        "dist/metadata/maps/helloween/elements/horizontaldoor.toml",
        "dist/metadata/maps/helloween/elements/torch.toml",
        "dist/metadata/maps/helloween/elements/verticaldoor.toml",
        "dist/metadata/maps/starwars/background/background.toml",
        "dist/metadata/maps/thumbnails/helloween.toml",
        "dist/metadata/maps/thumbnails/starwars.toml",
        "dist/metadata/system/buttons/back.toml",
        "dist/metadata/system/buttons/button_confirm_game.toml",
        "dist/metadata/system/buttons/button_join.toml",
        "dist/metadata/system/buttons/button_join_game.toml",
        "dist/metadata/system/buttons/button_save_config.toml",
        "dist/metadata/system/buttons/button_start.toml",
        "dist/metadata/system/buttons/settingswheel.toml",
        "dist/metadata/system/checkbox/greencheckboxoff.toml",
        "dist/metadata/system/checkbox/greencheckboxon.toml",
        "dist/metadata/system/inputs/joingameinput.toml",
        "dist/metadata/system/inputs/settingsmenuinput.toml",
        "dist/metadata/system/textareas/textarea.toml",
        "dist/metadata/weapon/bow/ammo/arrow.toml",
        "dist/metadata/weapon/bow/bow.toml",
        "dist/metadata/weapon/sword/redsword.toml",
        "dist/metadata/weapon/thumbnails/bow.toml",
        "dist/shaders/foot_prints.kage",
        "dist/shaders/torch_animated_lightning.kage",
        "dist/shaders/torch_lightning.kage",
        "dist/star_wars.kra",
    ],
    importpath = "github.com/YarikRevich/hide-seek-client/assets",
    visibility = ["//visibility:public"],
)
