load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/YarikRevich/hide-seek-client/cmd",
    visibility = ["//visibility:private"],
    cgo = True,
    deps = [
        "//assets",
        "//internal/core/middlewares",
        "//internal/core/paths",
        "//internal/core/profiling",
        "//internal/core/screen",
        "//internal/core/sources",
        "//internal/loop",
        "//tools/params",
        "//tools/printer",
        "@com_github_hajimehoshi_ebiten_v2//:ebiten",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "hide-seek-client",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
