load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "camera",
    srcs = ["camera.go"],
    importpath = "github.com/YarikRevich/hide-seek-client/internal/core/camera",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/core/objects",
        "@com_github_hajimehoshi_ebiten_v2//:ebiten",
    ],
)
