load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "networking",
    srcs = ["networking.go"],
    importpath = "github.com/YarikRevich/hide-seek-client/internal/core/networking",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/core/networking/clients",
        "//internal/core/networking/dialer",
    ],
)
