load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "render",
    srcs = ["render.go"],
    importpath = "github.com/YarikRevich/hide-seek-client/internal/core/render",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/core/screen",
        "@com_github_hajimehoshi_ebiten_v2//:ebiten",
    ],
)
