load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sourceupgrader",
    srcs = ["metadataupgrader.go"],
    importpath = "github.com/YarikRevich/hide-seek-client/internal/core/sourceupgrader",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/core/events",
        "//internal/core/screen",
        "//internal/core/sources",
        "//internal/core/world",
    ],
)
