load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "statemachine",
    srcs = [
        "constants.go",
        "multiple.go",
        "single.go",
        "statemachine.go",
    ],
    importpath = "github.com/YarikRevich/hide-seek-client/internal/core/statemachine",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_google_uuid//:uuid"],
)
