load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "animation",
    srcs = ["animation.go"],
    importpath = "github.com/YarikRevich/hide-seek-client/internal/layers/animation",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/core/profiling",
        "//internal/core/statemachine",
        "//internal/layers/animation/game",
        "//tools/params",
    ],
)
