load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "particles",
    srcs = ["particles.go"],
    importpath = "github.com/YarikRevich/hide-seek-client/internal/layers/particles",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/core/statemachine",
        "//internal/layers/particles/game",
    ],
)
